# uav_ros_controllers

./: .doxygen  .gitignore  .travis.yml  README.md  _c_make_lists_8txt.html  _carrot_reference_8cpp.html  _carrot_reference_8cpp__incl.map  _carrot_reference_8cpp__incl.md5  _carrot_reference_8cpp_source.html  _carrot_reference_8hpp.html  _carrot_reference_8hpp__dep__incl.map  _carrot_reference_8hpp__dep__incl.md5  _carrot_reference_8hpp__incl.map  _carrot_reference_8hpp__incl.md5  _carrot_reference_8hpp_source.html  _carrot_reference_node_8cpp.html  _carrot_reference_node_8cpp__incl.map  _carrot_reference_node_8cpp__incl.md5  _carrot_reference_node_8cpp_a3c04138a5bfe5d72780bb7e82a18e627_cgraph.md5  _carrot_reference_node_8cpp_source.html  _cascade_p_i_d_8cpp.html  _cascade_p_i_d_8cpp__incl.map  _cascade_p_i_d_8cpp__incl.md5  _cascade_p_i_d_8cpp_source.html  _cascade_p_i_d_8hpp.html  _cascade_p_i_d_8hpp__dep__incl.map  _cascade_p_i_d_8hpp__dep__incl.md5  _cascade_p_i_d_8hpp__incl.map  _cascade_p_i_d_8hpp__incl.md5  _cascade_p_i_d_8hpp_source.html  _control_base_8cpp.html  _control_base_8cpp__incl.map  _control_base_8cpp__incl.md5  _control_base_8cpp_source.html  _control_base_8hpp.html  _control_base_8hpp__dep__incl.map  _control_base_8hpp__dep__incl.md5  _control_base_8hpp__incl.map  _control_base_8hpp__incl.md5  _control_base_8hpp_source.html  (+599 more)
bebop_control/: .gitignore  CMakeLists.txt  (+2 more)
bebop_gazebo/: CMakeLists.txt  README.md  package.xml
bebop_gazebo/config/: rviz_detection.rviz  rviz_velodyne.rviz  rviz_velodyne_detection.rviz
bebop_gazebo/launch/: bebop_playground.launch  gazebo_bebop.launch  spawn_bebop.launch  spawn_wind_turbine.launch  wind_turbine_control.launch
bebop_gazebo/urdf/: bebop.urdf.xacro  bebop_base.urdf.xacro  multirotor_base.urdf.xacro  wind_turbine.base.urdf.xacro  wind_turbine.gazebo.xacro  wind_turbine_big.base.urdf.xacro
plane_detection_ros/: CMakeLists.txt  README.md  package.xml
plane_detection_ros/config/: DistanceControlParameters.cfg  PlaneDetectionParameters.cfg  detection_parameters.yaml  detection_parameters_sim.yaml  distance_control_parameters.yaml  distance_control_parameters_sim.yaml  joy.config.yaml  joy_real.config.yaml  joy_sim.config.yaml
plane_detection_ros/config/control/: DistanceControlParameters.cfg  PositionControlParameters.cfg  distance_control.params.yaml  distance_control_sim.params.yaml  joy.config.yaml  joy_sim.config.yaml  position_control.params.yaml  position_control_sim.params.yaml  sequence.params.yaml
plane_detection_ros/config/detection/: PlaneDetectionParameters.cfg  detection_parameters.yaml  detection_parameters_sim.yaml
plane_detection_ros/include/: DetectionWrapper.h  DistanceControl.h  PlaneDetection.h
plane_detection_ros/include/control/: ControlBase.h  DistanceControl.h
plane_detection_ros/include/detection/: DetectionWrapper.h  PlaneDetection.h
plane_detection_ros/launch/: att_control.launch  carrot_control.launch  carrot_control_sim.launch  detection_test.launch  distance_control.launch  distance_control_sim.launch  plane_detection.launch  plane_detection_sim.launch
plane_detection_ros/nodes/: AttitudeControlNode.cpp  CarrotControlNode.cpp  DistanceControlNode.cpp  PlaneDetectionNode.cpp  SequenceControlNode.cpp
plane_detection_ros/src/: DistanceControl.cpp  PlaneDetection.cpp
plane_detection_ros/src/control/: CarrotControl.cpp  ControlBase.cpp  DistanceControl.cpp  JoyControl.cpp  SequenceControl.cpp
plane_detection_ros/src/detection/: DetectionBase.cpp  KalmanDetection.cpp  PlaneDetection.cpp
ros_controllers/uav_ros_control/: CMakeLists.txt  package.xml
ros_controllers/uav_ros_control/launch/: carrot_reference.launch  position_control.launch
ros_controllers/uav_ros_control/src/: KalmanFilter.cpp  NonlinearFilters.cpp  PID.cpp
ros_controllers/uav_ros_control_msgs/: package.xml
uav_ros_control/: CMakeCache.txt  CMakeLists.txt  package.xml
uav_ros_control/config/control/: DistanceControlParameters.cfg  FlightInitParameters.cfg  PositionControlParameters.cfg  distance_control.params.yaml  position_control.params.yaml  position_control_msf.params.yaml  position_control_msf_cartographer.params.yaml
uav_ros_control/config/reference/: BrickPickupStateMachineParameters.cfg  GlobalPickupStateMachineParameters.cfg  MasterPickupStateMachineParameters.cfg  VisualServoParameters.cfg  VisualServoStateMachineParameters.cfg  brick_pickup_sm.yaml  ch1_gps_constraints.yaml  ch2_gps_constraints.yaml  ch3_gps_constraints.yaml  geofence_constraints.yaml  global_pickup_sm.yaml  joy_control_input.config.yaml  master_pickup_sm.yaml  visual_servo_brick.yaml  visual_servo_brick_simulation.yaml  visual_servo_brick_sm.yaml  visual_servo_sm.yaml
uav_ros_control/launch/: bebop_mpc_msf.launch  carrot_reference.launch  distance_control.launch  flight_init.launch  global_brick_pickup.launch  joy.launch  master_pickup_control.launch  pickup_servo.launch  pid_carrot.launch  pid_carrot_geo_fence.launch  position_control.launch  potential_fields_bebop_mpc_msf.launch  potential_pid_carrot.launch  visual_servo.launch  visual_servo_brick.launch
uav_ros_control/nodes/control/: DistanceControlNode.cpp  FlightInitNode.cpp  PositionControlNode.cpp
uav_ros_control/nodes/reference/: BrickPickupStateNode.cpp  CarrotReferenceNode.cpp  GeoFenceNode.cpp  GlobalPickupStateNode.cpp  MasterPickupControlNode.cpp  PickupStateNode.cpp  PickupStateNode_trajectory.cpp  VisualServoIdleNode.cpp  VisualServoNode.cpp  VisualServoStateNode.cpp
uav_ros_control/scripts/: magnet_activity_sim.py  magnet_override_sim.py  point2trajectory.py  pose_to_trajectory_point.py
uav_ros_control/src/: KalmanFilter.cpp
uav_ros_control/src/control/: CascadePID.cpp  ControlBase.cpp  DistanceController.cpp  PID.cpp
uav_ros_control/src/filters/: KalmanFilter.cpp  NonlinearFilters.cpp
uav_ros_control/src/reference/: CarrotReference.cpp  GeoFence.cpp  JoyControlInput.cpp  VisualServo.cpp
uav_ros_tracker/: CMakeLists.txt  README.md  package.xml
uav_ros_tracker/src/: cvx_wrapper.cpp
uav_ros_util/: CMakeLists.txt  README.md  package.xml
(+177 files in other folders)
