<package>

  <name>med_uav_description</name>
  <version>1.0.0</version>
  <description>This package provides URDF model of the parrot ardrone vehicle.</description>

  <maintainer email="antun.ivanovic@gmail.com">Antun Ivanovic</maintainer>

  <author>Antun Ivanovic</author>

  <license>Other</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>velodyne_description</build_depend>
  <build_depend>velodyne_gazebo_plugins</build_depend>
  <build_depend>velodyne_simulator</build_depend>
  
  <run_depend>velodyne_description</run_depend>
  <run_depend>velodyne_gazebo_plugins</run_depend>
  <run_depend>velodyne_simulator</run_depend>
  
</package>
