<package>
  <name>uav_ros_control_msgs</name>
  <version>1.0.0</version>
  <description>Package containing messages for UAV control.</description>

  <maintainer email="lovro.markovic@fer.hr">Lovro Markovic</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
